# models/init.go
@@ -1,12 +1,14 @@
 package models
 
 import (
+	"github.com/redis/go-redis/v9"
 	"gorm.io/driver/mysql"
 	"gorm.io/gorm"
 	"log"
 )
 
 var DB = Init()
+var Redis = InitRedisDB()
 
 func Init() *gorm.DB {
 	dsn := "root:123456@tcp(127.0.0.1:3306)/gin_gorm_oj?charset=utf8mb4&parseTime=True&loc=Local"
@@ -15,4 +17,12 @@ func Init() *gorm.DB {
 		log.Println("gorm init err:", err)
 	}
 	return db
+}
+
+func InitRedisDB() *redis.Client {
+	return redis.NewClient(&redis.Options{
+		Addr:     "localhost:6379",
+		Password: "123456",
+		DB:       0, // use default DB
+	})
 }
